feat: Add Docker support and CI/CD pipeline
- Dockerize application with multi-stage build (Node 20 Alpine)
- Add docker-compose for local development (app + PostgreSQL)
- Create GitHub Actions CI/CD workflow with auto-deployment
- Add DigitalOcean deployment automation and guides
- Fix configuration persistence bug (useEffect race condition)
- Add health check endpoint at /api/health
- Add PUT /api/configs/:id endpoint for updating configs
- Improve production build process with dynamic imports
- Create comprehensive deployment documentation

Docker Features:
- Multi-stage build for optimized image size
- Health checks for container monitoring
- Volume persistence for database and uploads
- Non-root user for security
- Automatic restart on failure

CI/CD Features:
- Automated testing (TypeScript check + build)
- Docker image build and push to GHCR
- Security scanning with Trivy
- Auto-deployment to DigitalOcean on main branch push

Bug Fixes:
- Fixed extraction config not persisting after page reload
- Fixed vite import errors in production build
- Added missing PUT endpoint for config updates

Ready for production deployment on DigitalOcean!

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
-    "start:pm2": "pm2 start ecosystem.config.js --env production",
-    "stop:pm2": "pm2 stop scriptsensei",
-    "restart:pm2": "pm2 restart scriptsensei",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "postinstall": "npm run build"
+    "docker:build": "docker build -t scriptsensei:latest .",
+    "docker:run": "docker run -p 5000:5000 --env-file .env scriptsensei:latest",
+    "docker:dev": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f app",
+    "docker:rebuild": "docker-compose up -d --build"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
