Fix View Results navigation to show correct prescription data
- Update results page to read prescriptionId from URL parameters
- Fix history page to navigate to /results?prescriptionId=ID instead of home
- Fix ProcessingQueue to navigate to results page correctly
- Remove debug logging after successful testing
- Each prescription now shows its own specific results instead of latest

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       start_period: 40s
     networks:
       - scriptsensei-network
+    # Automatically run database migrations on startup
+    command: sh -c "npm run db:push && node dist/index.js"
 
 volumes:
   postgres_data:
