Fix GitHub Actions workflow for fresh server deployment
- Add automatic directory creation (mkdir -p ~/script-sensei)
- Add smart repository cloning/pulling logic
- Handle both fresh and existing server scenarios
- Use github.repository variable for dynamic repo URL

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -136,12 +136,19 @@ jobs:
           DROPLET_USER: ${{ secrets.DROPLET_USER }}
         run: |
           ssh -o StrictHostKeyChecking=no $DROPLET_USER@$DROPLET_IP << 'ENDSSH'
-            # Navigate to app directory
-            cd ~/script-sensei || exit 1
+            # Create directory if it doesn't exist
+            mkdir -p ~/script-sensei
+            cd ~/script-sensei
             
-            # Pull latest changes
-            echo "📥 Pulling latest code..."
-            git pull origin main
+            # Clone if directory is empty, or pull if it exists
+            if [ -d ".git" ]; then
+              echo "📥 Pulling latest code..."
+              git pull origin main
+            else
+              echo "📥 Cloning repository..."
+              git clone https://github.com/${{ github.repository }}.git .
+              git checkout main
+            fi
             
             # Login to GitHub Container Registry
             echo "🔐 Logging into GitHub Container Registry..."
