--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist && esbuild server/migrate.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
+    "db:migrate": "tsx server/migrate.ts",
+    "db:migrate:prod": "node dist/migrate.js",
     "docker:build": "docker build -t scriptsensei:latest .",
     "docker:run": "docker run -p 5000:5000 --env-file .env scriptsensei:latest",
     "docker:dev": "docker-compose up -d",
