feat: integrate OpenRouter and implement seamless upload-and-process endpoint

--- a/deployment.env.example
+++ b/deployment.env.example
@@ -5,14 +5,21 @@
 # Replace with your AWS RDS PostgreSQL connection string
 DATABASE_URL=postgresql://username:password@your-rds-endpoint:5432/scriptsensei
 
-# AI Service API Keys (Replace with your actual API keys)
-OPENAI_API_KEY=your_openai_api_key_here
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-GEMINI_API_KEY=your_google_gemini_api_key_here
+# AI Service API Keys (OpenRouter is now the primary provider)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Legacy keys (can be left blank if using OpenRouter)
+OPENAI_API_KEY=
+ANTHROPIC_API_KEY=
+GEMINI_API_KEY=
 
 # Server Configuration
 PORT=5000
 NODE_ENV=production
+
+# External API Configuration
+# This key is required for external apps to access the ScriptSensei API
+EXTERNAL_API_KEY=your_secret_api_key_here
 
 # Optional: Add any other production-specific variables
 # LOG_LEVEL=info
