--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@types/cors": "^2.8.19",
     "@types/json2csv": "^5.0.7",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
@@ -56,6 +57,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
+    "cors": "^2.8.6",
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.39.1",
